kubernetes/services/it-tools/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    name: it-tools
    type: productivity
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
